@@ -5,7 +5,7 @@
 ## Modified by:
 ## Created:     11/09/2002
 ## RCS-ID:      $Id$
-## Copyright:   (c) 2002, 2004 Simon Flack
+## Copyright:   (c) 2002, 2004, 2007 Simon Flack
 ## Licence:     This program is free software; you can redistribute it and/or
 ##              modify it under the same terms as Perl itself
 #############################################################################
@@ -27,6 +27,9 @@ Wx::wx_boot( 'Wx::DocView', $VERSION );
 
 no strict;
 
+package Wx::Printout;                   # avoid warning
+package Wx::MDIChildFrame;              # avoid warning
+package Wx::MDIParentFrame;             # avoid warning
 package Wx::DocManager;                 @ISA = qw(Wx::EvtHandler);
 package Wx::View;                       @ISA = qw(Wx::EvtHandler);
 package Wx::Document;                   @ISA = qw(Wx::EvtHandler);
@@ -35,6 +38,7 @@ package Wx::DocChildFrame;              @ISA = qw(Wx::Frame);
 package Wx::DocParentFrame;             @ISA = qw(Wx::Frame);
 package Wx::DocMDIChildFrame;           @ISA = qw(Wx::MDIChildFrame);
 package Wx::DocMDIParentFrame;          @ISA = qw(Wx::MDIParentFrame);
+package Wx::PlCommand;                  @ISA = qw(Wx::Command);
 
 1;
 
